[package]
name = "rate-my-project"
version = "0.1.0"
edition = "2021"
description = "Tools to measure project efficiency"
repository = "https://github.com/cledouarec/rate-my-project"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
