[tool.poetry]
name = "rate-my-project"
version = "1.2.0"
authors = ["Christophe Le Douarec <christophe.ledouarec@qorvo.com>"]
description = "Swiss knife tool for analyzing project efficiency"
readme = "README.md"
repository = "https://github.com/cledouarec/rate-my-project"
license = "Apache-2.0"
keywords = ["team", "efficiency", "visualization", "analysis"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.10"
click = "^8.1.7"
dash = { version = "^2.18.2", extras = ["diskcache"] }
dash-bootstrap-components = "^1.6.0"
dash-bootstrap-templates = "^1.3.0"
inflection = "^0.5.1"
Jinja2 = "^3.1.4"
kaleido = "0.2.1"
pandas = "^2.2.3"
plotly = "^5.24.1"
pydantic = "^2.10.3"
pydantic-settings = "^2.7.0"
python-dateutil = "^2.9.0"
PyYAML = "^6.0.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.9"
pre-commit = "^3.8.0"
pylint = "^3.3.2"
pytest = "^8.3.4"
pytest-cov = "^4.1.0"
ruff = "^0.2.2"

[tool.poetry.scripts]
rate_my_project = "rate_my_project.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.0"
version_files = [
    "rate_my_project/__init__.py:__version__",
    "pyproject.toml:^version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.ruff]
line-length = 79
